--- a/nlp/admin/web/src/index.html
+++ b/nlp/admin/web/src/index.html
@@ -18,7 +18,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Admin</title>
+  <title>NLP Admin</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -26,6 +26,6 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  <tock-root>Loading...</tock-root>
+  <tock-nlp-admin-root>Loading...</tock-nlp-admin-root>
 </body>
 </html>
