--- a/bot/admin/web/src/index.html
+++ b/bot/admin/web/src/index.html
@@ -2,12 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Bot Admin</title>
+  <title>Tock Studio</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <tock-bot-admin-root></tock-bot-admin-root>
