--- a/bot/admin/web/src/index.html
+++ b/bot/admin/web/src/index.html
@@ -22,7 +22,7 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <tock-bot-admin-root></tock-bot-admin-root>
